k8s/31-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-backend-svc
  namespace: library-k8s
  labels:
    app: rails-backend
    app.kubernetes.io/name: neighborly-library
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app: rails-backend
  ports:
    - name: http
      port: 80
      targetPort: 80
