k8s/70-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: neighborly
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  sessionAffinity: None
