k8s/90-networkpolicy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: library
spec:
  podSelector: {}
  policyTypes:
    - Ingress
