k8s/90-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: neighborly
spec:
  podSelector:
    matchLabels:
      app: rails-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 3000
---
IGNORE ---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: neighborly
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
--- IGNORE ---
